<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    style="@style/app_llv" >

    <LinearLayout
        style="@style/header_footer_row_llv" >

        <ImageView
            android:id="@+id/iv_icon"
            style="@style/icon_v"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/tv_app_name"
            style="@style/app_name_tv"
            android:layout_weight="1"
            android:text="@string/app_name" />

        <LinearLayout
            android:id="@+id/ll_action_bar"
            style="@style/horizontal_linear_layout_v"
            android:layout_width="wrap_content">

            <ImageButton
                android:id="@+id/btn_del_bill_record"
                style="@style/button_icon_v"
                android:contentDescription="@string/btn_lbl_del_bill_record"
                android:src="@android:drawable/ic_delete"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/btn_new_bill"
                style="@style/button_icon_v"
                android:contentDescription="@string/btn_lbl_new_bill"
                android:src="@android:drawable/ic_dialog_alert" />

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:id="@+id/sv_bill_rows"
        style="@style/app_v"
        android:layout_weight="1" >

        <LinearLayout
            style="@style/vertical_linear_layout_v" >

            <LinearLayout
                android:id="@+id/ll_bill_records"
                style="@style/vertical_linear_layout_v" />

            <ImageButton
                android:id="@+id/btn_add_new_bill_record"
                android:contentDescription="@string/btn_lbl_add_new_bill_record"
                android:src="@android:drawable/ic_input_add"
                android:layout_gravity="center"
                style="@style/button_icon_v" />

        </LinearLayout>

    </ScrollView>
    
    <LinearLayout 
        style="@style/header_footer_row_llv" >

        <TextView
            android:id="@+id/tv_subtotal_lbl"
            style="@style/footer_row_tv"
            android:layout_weight="1"
            android:text="@string/lbl_subtotal" />
        
        <TextView
            android:id="@+id/tv_subtotal_empty"
            style="@style/footer_number_etv" />
        
        <TextView
                android:id="@+id/tv_subtotal_sum"
                style="@style/footer_row_total_number_tv" />
        
    </LinearLayout>
    
    <LinearLayout 
        style="@style/header_footer_row_llv" >

        <TextView
            android:id="@+id/tv_tax_lbl"
            style="@style/footer_row_tv"
            android:layout_weight="1"
            android:text="@string/lbl_tax" />

        <com.yagodar.android.database.sqlite.custom.DbEditText
                android:id="@+id/et_tax"
                style="@style/footer_number_etv" />
        
        <TextView
                android:id="@+id/tv_tax_sum"
                style="@style/footer_row_total_number_tv" />
        
    </LinearLayout>
    
    <LinearLayout 
        style="@style/header_footer_row_llv" >

        <TextView
                android:id="@+id/tv_tip_lbl"
            style="@style/footer_row_tv"
            android:layout_weight="1"
            android:text="@string/lbl_tip" />
        
        <com.yagodar.android.database.sqlite.custom.DbEditText
                android:id="@+id/et_tip"
                style="@style/footer_number_etv" />
        
        <TextView
                android:id="@+id/tv_tip_sum"
                style="@style/footer_row_total_number_tv" />
        
    </LinearLayout>
    
    <LinearLayout 
        style="@style/header_footer_row_llv" >

        <TextView
                android:id="@+id/tv_total_lbl"
            style="@style/footer_total_row_tv"
            android:layout_weight="1"
            android:text="@string/lbl_total" />

        <TextView
                android:id="@+id/tv_total_empty"
            style="@style/footer_number_etv" />

        <TextView
                android:id="@+id/tv_total_sum"
                style="@style/footer_total_row_number_tv" />

        <EditText
                android:id="@+id/et_hidden"
                style="@style/hidden_etv" />
        
    </LinearLayout>
    
</LinearLayout>