<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    style="@style/app_row_llv" >

        <TextView
            style="@style/screen_edge_intent_tv" />

        <LinearLayout
            style="@style/zone_content_horizontal_llv" >

            <LinearLayout
                style="@style/zone_item_name_horizontal_llv" >

                <TextView
                    style="@style/alignment_v" />

                <com.yagodar.android.billplease.custom.BillRecordDbEditText
                    android:id="@+id/et_item_name"
                    android:contentDescription="@string/lbl_item_name"
                    style="@style/input_etv" />

                <TextView
                    style="@style/alignment_v" />

            </LinearLayout>

            <LinearLayout
                style="@style/zone_tax_tip_horizontal_llv" >

                <LinearLayout
                    style="@style/half_horizontal_llv">

                    <TextView
                        style="@style/alignment_v" />

                    <com.yagodar.android.billplease.custom.BillRecordDbEditText
                        android:id="@+id/et_cost"
                        android:contentDescription="@string/lbl_cost"
                        style="@style/number_decimal_etv" />

                    <TextView
                        style="@style/alignment_v" />

                </LinearLayout>

                <LinearLayout
                    style="@style/half_horizontal_llv">

                    <TextView
                        style="@style/alignment_v" />

                    <com.yagodar.android.billplease.custom.BillRecordDbEditText
                        android:id="@+id/et_share"
                        android:contentDescription="@string/lbl_share"
                        style="@style/number_etv" />

                    <TextView
                        style="@style/alignment_v" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/screen_edge_intent_tv" />

</LinearLayout>